[package]
name = "fluid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = "0.4.23"
tokio = { version = "1.23.0", features = ["full"] }
sea-orm = { version = "0.10.6", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros"
] }
rocket = "0.5.0-rc.2"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.53"
fluid_db = { path = "../db" }
fluid_common = { path = "../common" }
