[package]
name = "processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fluid_db = { path = "../db" }
fluid_common = { path = "../common" }
tokio = { version = "1.23.0", features = ["full"] }
ctrlc = "3.2.4"
anyhow = "1.0.68"
crossbeam-channel = "0.5.6"
sea-orm = { version = "0.10.6", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros"
] }
chrono = "0.4.23"
uuid = "1.3.0"
reqwest = { version = "0.11", features = ["json"] }
